--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@ body{
 .all_notices{
     max-width: 60%px;
     display: grid;
+    margin-top: 500px;
     padding-top: 96px;
     grid-template-columns: repeat(auto-fill, 350px);
     place-content: center;
@@ -34,14 +35,14 @@ body{
 @media(max-width: 736px ){
     .all_notices{ 
         grid-template-columns: 1fr;
-     }
-     .button{
+    }
+    .button{
         display: none;
-     }
-     .menu-icon{
-        display: block;
+    }
+    .menu-icon{
         color: #fff;
-     }
+        display: block;
+    }
 
 }
 
