--- a/src/Componentes/slider/slider.css
+++ b/src/Componentes/slider/slider.css
@@ -26,12 +26,17 @@
     width: 100%;
     border-radius: 10px;
 }
+.img_five_news{
+    height: 400px;
+    width: 100%;
+}
 .news_five_title{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #fff;
+    text-align: justify;
 }
 
 /* Buttons */
