--- a/src/Componentes/slider/slider.css
+++ b/src/Componentes/slider/slider.css
@@ -1,62 +1,24 @@
-/* Slideshow */
-.div_slidershow{
-    position: relative;
-    display: flex;
+
+
+.main-slider{
+    padding-top: 100px;
 }
-.slideshow {
-    margin: 0 auto;
-    overflow: hidden;
-    max-width: 100%;
-    position: absolute;
-    top: 110px;
-    left: 50px;
+.carousel .slider-wrapper{
+    width: 70%;
 }
 
-.slideshowSlider {
-    white-space: nowrap;
-    transition: ease 1000ms;
-    width: 700px;
+.carousel .thumb{
+    width: 5%;
+    height: 50px;
 }
-
-.slide {
-    position: relative;
-    display: inline-block;
-
-    height: 400px;
-    width: 100%;
-    border-radius: 10px;
-}
-.img_five_news{
-    height: 400px;
-    width: 100%;
-}
-.news_five_title{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    text-align: justify;
-}
-
-/* Buttons */
-
-.slideshowDots {
+.carousel{
     text-align: center;
 }
-
-.slideshowDot {
-    display: inline-block;
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-
-    cursor: pointer;
-    margin: 15px 7px 0px;
-
-    background-color: #c4c4c4;
+.legend{
+    font-size:30px;
 }
 
-.slideshowDot.active {
-    background-color: #6a0dad;
+.carousel .slide .legend{
+    font-size: 25px;
+    opacity: 20;
 }
