--- a/src/Css/cabecera.css
+++ b/src/Css/cabecera.css
@@ -1,5 +1,5 @@
 .header{
-    background-color: black;
+    background-color: #000;
     height: 80px;
     width: 100%;
     position: fixed;
@@ -11,6 +11,7 @@
     padding: 0 5%;
     box-sizing: border-box;
     transition: 0.5s;
+    z-index: 100000;
 
 }
 .logo{
