Mejoras de estilos

--- a/src/Componentes/news/news.css
+++ b/src/Componentes/news/news.css
@@ -16,7 +16,7 @@
     font-size: 2rem;
     font-weight: 500;
     letter-spacing: -1px;
-}
+}/*
 .category_button{
     text-decoration: none;
 	padding: 10px 30px;
@@ -27,4 +27,4 @@
 	font-weight: 500;
 	transition: .3s ease all;
     margin-left: 10px;
-}
+}*/
