--- a/src/Css/cabecera.css
+++ b/src/Css/cabecera.css
@@ -1,3 +1,4 @@
+/*
 .header{
     background-color: #000;
     height: 80px;
@@ -35,8 +36,110 @@
 .button:hover{
     background: #0066FF;
 }
-.menu-icon{
+.menu-icono{
     color: #fff;
     font-size: 30px;
     display: none;
+}*/
+
+.header{
+    background-color: #000;
+    color: #fff;
+    height: 80px;
+    width: 100%;
+    position: fixed;
+    z-index: 100000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 20px;
+    flex-wrap: nowrap;
+
 }
+.header i {
+    display: none;
+}
+.header .search{
+    color: #fff;
+    display: block;
+    font-size: 25px;
+}
+.header ul{
+    margin: 0px 20px;
+}
+.header ul li{
+    display: inline-block;
+    margin: 0 5px 16px 5px;
+}
+
+.header ul li .category_button{
+    color: #fff;
+    padding: 50px 13px;
+    text-transform: uppercase;
+    font-size: 14px !important; 
+}
+
+@media( max-width:763px ){
+     .header i {
+        display: block;
+        font-size: 30px;
+        cursor: pointer;
+     }
+     .header ul{
+        display: none;
+     }
+
+}
+
+
+li .category_button.active, li .category_button:hover{
+
+    border-bottom: #fff;
+    transition: .5s;
+}
+/*
+.checkbtn{
+    font-size: 30px;
+    color: #fff;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display:none;
+}
+
+@media( max-width: 858px ){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px; 
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    .header ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    .header ul li .category_button{
+        font-size: 20px;
+    }
+    li .category_button.hover, li .category_button.active{
+         background: none;
+         color: red;
+    }
+    #check:checked ~ ul {
+          left: 0;
+    }
+
+}
+*/
